--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -15,6 +15,7 @@
   
   <!-- vendor -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg-min.js"></script>
   
   <!-- mein -->
   <link rel="stylesheet" href="/assets/css/main.css">
