bringing back mobile nav

--- a/_includes/module/navigation.html
+++ b/_includes/module/navigation.html
@@ -1,6 +1,6 @@
 <nav class="site-nav">
   <div class="nav-header" hidden>
-    <a href="/" class="logo mobile"></a>
+    <a href="/" class="logo mobile">PD</a>
     <i class="fa fa-bars burger nav-trigger" aria-hidden="true"></i>
   </div>
 
@@ -15,3 +15,4 @@
 
   <div class="nav-trigger page-overlay"></div>
 </nav>
+<script src="/assets/js/navigation.js"></script>
