--- a/_includes/module/navigation.html
+++ b/_includes/module/navigation.html
@@ -8,7 +8,7 @@
     <!--<a href="/" class="logo"></a>-->
     <ul class="site-links slide-mid"> 
       <li><a href="/#portofolio">Portofolio</a></li>
-      <li><a href="https://docs.google.com/document/d/1dFwhY1mt5E6mwV1-Nvw3lafdWPy4y0LdTPYqrV_H62Y/pub">Résumé</a></li>
+      <li><a href="{{site.owner.resume}}">Résumé</a></li>
       <li><a href="/#contact">Contact</a></li>
     </ul>
   </div>
