google meta tag

--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -5,10 +5,12 @@
   <title>{{ site.name }}</title>
 
   <!-- seo -->
-  <meta name="Keywords" content="{{ site.name }}">
+  <meta name="Title" content="{{site.name}}">
+  <meta name="Keywords" content="{{site.keyword}}">
   <meta name="Description" content="{{site.description}}">
-  <meta name="Subject" content="">
   <meta name="robots" content="index,follow">
+
+  <meta name="google-site-verification" content="SNngrQaiprU2N383bkhgW119rIT9PiGDXmdIhqCSrRc" />
 
   <!-- viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
