--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="ceflix">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>{{ site.name }}</title>
