--- a/assets/css/layouts/_layout.scss
+++ b/assets/css/layouts/_layout.scss
@@ -28,8 +28,8 @@
   display: flex;
 
   @for $i from 1 through 12{
-    .col-#{round(100 * ($i / 12))}{
-      width: 100% * ($i / 12);
+    .col-#{round(100 / ($i))}{
+      width: 100% / ($i);
     }
   }
 
@@ -37,16 +37,16 @@
 
     @media (max-width: $screen-medium){
       @for $i from 1 through 12{
-        &.md-#{round(100 * ($i / 12))}{
-          width: 100% * ($i / 12);
+        &.md-#{round(100 / ($i))}{
+          width: 100% / ($i);
         }
       }
     }
 
     @media (max-width: $screen-small){
       @for $i from 1 through 12{
-        &.sm-#{round(100 * ($i / 12))}{
-          width: 100% * ($i / 12);
+        &.sm-#{round(100 / ($i))}{
+          width: 100% / ($i);
         }
       }
     }
